[package]
name = "network_wasm"
version = "1.0.0"
authors = ["hazae41 <4405263+hazae41@users.noreply.github.com>"]
edition = "2021"

description = "WebAssembly bundle for Network"
repository = "https://github.com/hazae41/network.wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.93", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
getrandom = { version = "=0.2.10", default-features = false, features = ["js"] }
rand = { version = "=0.8.5", default-features = false, features = ["std", "std_rng"] }
sha3_wasm = { path = "../../node_modules/@hazae41/sha3.wasm/dist/wasm"}
base16_wasm = { path = "../../node_modules/@hazae41/base16.wasm/dist/wasm"}
memory_wasm = { path = "../../node_modules/@hazae41/memory.wasm/dist/wasm"}
